--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'newconn' #replace with your
-    scriptType: 'bash'
+    scriptType: 'PowerShell'
     scriptLocation: 'inlineScript'
     inlineScript: | 
       az account set --subscription 56edc819-264e-4a3c-be6f-1496e0b07eeb
