--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     command: 'init'
     workingDirectory: '$(System.DefaultWorkingDirectory)'
     backendType: 'azurerm'
-    backendServiceArm: 'terraform-aks-azurerm-svc-con'
+    backendServiceArm: 'newconn'
 
 # Plan the Terraform deployment
 - task: TerraformTaskV1@0
